allow input from the console

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,3 +49,7 @@ application {
     // Define the main class for the application.
     mainClass = 'spark.project.App'
 }
+
+run {
+    standardInput = System.in
+}
