--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/7.4.2/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'spark-project'
+rootProject.name = 'app-spark'
 include('app')
